upto email verification

--- a/frontend/src/userComponents/user/registerComponents/register.css
+++ b/frontend/src/userComponents/user/registerComponents/register.css
@@ -37,3 +37,9 @@ input::-webkit-inner-spin-button {
     font-weight: normal;
     font-size: x-large;
 }
+.errors{
+    color: firebrick;
+}
+.logInLink{
+    text-decoration: none;
+}
